SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Exterior Painting</fullName>
            </value>
            <value>
                <fullName>Framing</fullName>
            </value>
            <value>
                <fullName>Interior Painting</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Sheetrock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>