SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Contractor_Account__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account of the responsible contractor.</inlineHelpText>
    <label>Contractor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Warranty Item&apos;s</relationshipLabel>
    <relationshipName>Warranty_Item_s</relationshipName>
    <type>Lookup</type>
</CustomField>