SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Contractor_Resource__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Contracting Resource that is available for completing the work.</inlineHelpText>
    <label>Contractor Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Warranty Item&apos;s</relationshipLabel>
    <relationshipName>Warranty_Item_s</relationshipName>
    <type>Lookup</type>
</CustomField>