SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <inlineHelpText>Date the Warranty Item was submitted by the customer</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>