SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>High Level description of the Warranty Item.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>