SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Internal_Resource__c.field-meta.xml
<CustomField>
    <fullName>Internal_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Internal Resource responsible for completing or following up on the Warranty Item.</inlineHelpText>
    <label>Internal Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Warranty Item&apos;s (Internal Resource)</relationshipLabel>
    <relationshipName>Warranty_Item_s1</relationshipName>
    <type>Lookup</type>
</CustomField>