SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>Location where the Warranty Item exists.</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bedroom #1 Bath</fullName>
            </value>
            <value>
                <fullName>Bedroom #2</fullName>
            </value>
            <value>
                <fullName>Bedroom #2 Bath</fullName>
            </value>
            <value>
                <fullName>Bedroom #3</fullName>
            </value>
            <value>
                <fullName>Bedroom #3 Bath</fullName>
            </value>
            <value>
                <fullName>Dining Room</fullName>
            </value>
            <value>
                <fullName>edroom #1</fullName>
            </value>
            <value>
                <fullName>Game Room</fullName>
            </value>
            <value>
                <fullName>Hallway</fullName>
            </value>
            <value>
                <fullName>Hearth Room</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Master Bathroom</fullName>
            </value>
            <value>
                <fullName>Master Bedroom</fullName>
            </value>
            <value>
                <fullName>Master Closet</fullName>
            </value>
            <value>
                <fullName>Mud Room</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other (Indicate in Notes Section)</fullName>
            </value>
            <value>
                <fullName>Stairway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>