SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Warranty Items</relationshipLabel>
    <relationshipName>Warranty_Items</relationshipName>
    <type>Lookup</type>
</CustomField>