SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <inlineHelpText>Warranty this Warranty Item is associated with.</inlineHelpText>
    <label>Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipLabel>Warranty Item&apos;s</relationshipLabel>
    <relationshipName>Warranty_Item_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>