SubBt/force-app/main/default/objects/Warranty_Item__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <inlineHelpText>Date the work should be completed by the vendor or employee.</inlineHelpText>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>