SubBt/force-app/main/default/objects/Warranty_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Category__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Location__c</columns>
    <columns>Project__c</columns>
    <columns>Purchase_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>